# ci-dependencies

./: CMakeLists.txt  build_all.sh  dd4hep-python.patch  dependencies.sh  install_prereq_ubuntu.sh  setup.sh.in  ssh_config
.github/workflows/: build.yml  macos.yml  macos_cmake.yml  script.yml
